update with 5 changes

--- a/note/macos.html
+++ b/note/macos.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>macOS</h1>
-<div class="title-date">2020년 5월 11일 수정</div>
+<div class="title-date">2020년 5월 12일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -64,7 +64,7 @@
 <li><a href="#5bc1b507">이모티콘(Emoji) 쉽게 입력하기</a></li>
 <li><a href="#c4384bd3">셸에서 iCloud Drive 접근하기</a></li>
 <li><a href="#9e0be887">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
-<li><a href="#6aa89e74">스크린숏 캡처 시 작게 표시되는 거 없애기</a></li>
+<li><a href="#1c618020">스크린숏 캡처 시 미리보기 없애기</a></li>
 </ul>
 </div>
 </div>
@@ -138,9 +138,9 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </p>
 </div>
 </div>
-<div id="outline-container-6aa89e74" class="outline-2">
-<h2 id="6aa89e74">스크린숏 캡처 시 작게 표시되는 거 없애기</h2>
-<div class="outline-text-2" id="text-6aa89e74">
+<div id="outline-container-1c618020" class="outline-2">
+<h2 id="1c618020">스크린숏 캡처 시 미리보기 없애기</h2>
+<div class="outline-text-2" id="text-1c618020">
 <p>
 어느 순간부터 스크린숏을 캡처하면 우측 하단에 작은 창으로 캡쳐된 이미지 미리보기가 잠깐 나타났다가 사라진다.
 그런데 스크린숏 파일은 이 작은 이미지 미리보기 창이 사라지기 전까지 나타나지 않는다.
