update with 1 changes

--- a/note/emacs.html
+++ b/note/emacs.html
@@ -420,10 +420,11 @@ CRLF를 쓰고 싶다면 <code>utf-8-dos</code> 를 선택해주면 된다.
 그런데 모종의 사유로,
 예를 들어 개인적으로 개발 중인 코드가 출력하는 메시지를 좀 더 깔끔하게 보고 싶어서
 이 버퍼의 내용을 지우고 싶을 때가 있을 것이다.
+하지만 이 버퍼는 read-only라 수동으로 삭제도 안 된다. 어떻게 해야 할까?
 </p>
 
 <p>
-답은 간단하다. 그냥 이 버퍼를 지워버리면 된다.
+답은 간단하다. 그냥 이 버퍼 자체를 지워버리면 된다.
 <code>kill-buffer</code> 함수를 호출하거나
 <a href="doom-emacs.html">Doom Emacs</a>의 경우라면 <code>SPC b k</code> 단축키로 날려버릴 수 있다.
 </p>
