--- a/note/index.html
+++ b/note/index.html
@@ -56,6 +56,13 @@
 <section class="content">
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/date.html">date</a></h2>
+<div class="article-link-date">
+2020년 5월 12일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
 2020년 5월 12일 수정</div>
