--- a/note/shell.html
+++ b/note/shell.html
@@ -85,9 +85,16 @@
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/date.html">date</a></h2>
+<div class="article-link-date">
+2020년 5월 12일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
 <div class="article-link-date">
-2020년 5월 10일 수정</div>
+2020년 5월 12일 수정</div>
 </div>
 </div>
 <div class="article-link">
