update with 5 changes

--- a/note/css.html
+++ b/note/css.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>CSS</h1>
-<div class="title-date">2020년 5월 5일 수정</div>
+<div class="title-date">2020년 5월 12일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -533,6 +533,7 @@ alt는 접근성을 보완하기 위해 중요한 설명이다. 예를 들어
 <div class="outline-text-3" id="text-09d2bd16">
 <ul class="org-ul">
 <li><a target="_blank" href="https://studiomeal.com/archives/197">🌏이번에야말로 CSS Flex를 익혀보자</a></li>
+<li><a target="_blank" href="https://medium.com/@js_tut/the-complete-css-flex-box-tutorial-d17971950bdc">🌏The Complete CSS Flex Box Tutorial</a></li>
 </ul>
 </div>
 </div>
@@ -558,6 +559,7 @@ alt는 접근성을 보완하기 위해 중요한 설명이다. 예를 들어
 <div class="outline-text-3" id="text-7f598db0">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.sitepoint.com/hide-elements-in-css/">🌏10 Ways to Hide Elements in CSS</a></li>
+<li><a target="_blank" href="https://moderncss.dev">🌏Modern CSS Solutions for Old CSS Problems</a></li>
 </ul>
 </div>
 </div>
