--- a/note/index.html
+++ b/note/index.html
@@ -54,6 +54,7 @@
 <div class="left-empty">
 </div>
 <section class="content">
+<h1>❏ NOTE의 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
