--- a/note/git.html
+++ b/note/git.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>Git</h1>
-<div class="title-date">2020년 4월 21일 수정</div>
+<div class="title-date">2020년 5월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -774,6 +774,8 @@ github 설정이 추가되어 있다는 점만 제외하면 지극히 평범한 
 <h2 id="0bbb90e1">외부 링크</h2>
 <div class="outline-text-2" id="text-0bbb90e1">
 <ul class="org-ul">
+<li><a target="_blank" href="https://parksb.github.io/article/28.html">🌏Git 사용 중 자주 만나는 이슈 정리</a></li>
+<li><a target="_blank" href="https://readystory.tistory.com/151">🌏Git Rebase 제대로 알고 쓰기 (feat. cherry-pick)</a></li>
 <li><a target="_blank" href="https://ohshitgit.com/">🌏Oh Shit, Git!?!</a></li>
 <li><a target="_blank" href="https://git-rebase.io/">🌏git rebase in depth</a></li>
 </ul>
