--- a/note/macos.html
+++ b/note/macos.html
@@ -56,7 +56,7 @@
 <section class="content">
 <header>
 <h1>macOS</h1>
-<div class="title-date">2020년 5월 12일 수정</div>
+<div class="title-date">2020년 5월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -65,6 +65,7 @@
 <li><a href="#c4384bd3">셸에서 iCloud Drive 접근하기</a></li>
 <li><a href="#9e0be887">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 <li><a href="#1c618020">스크린숏 캡처 시 미리보기 없애기</a></li>
+<li><a href="#806b85b2">실행 중인 대부분의 앱 종료 혹은 재시작하기</a></li>
 </ul>
 </div>
 </div>
@@ -160,6 +161,37 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 
 <p>
 귀찮아서 한국어로는 확인해보지 않았는데 위치는 동일할 테니 어렵지 않게 할 수 있을 것 같다.
+</p>
+</div>
+</div>
+<div id="outline-container-806b85b2" class="outline-2">
+<h2 id="806b85b2">실행 중인 대부분의 앱 종료 혹은 재시작하기</h2>
+<div class="outline-text-2" id="text-806b85b2">
+<p>
+간혹 메모리 누출(leak) 이슈 등으로 macOS를 재시작하기는 귀찮은데 앱은 대부분 종료시켜 버리고 싶을 때가 있다.
+이럴 때는 아래 <a href="cli.html">CLI</a> 커맨드를 이용할 수 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">launchctl reboot apps
+</pre>
+</div>
+<p>
+이 명령어는 현재 사용자 환경에서 구동 중인 모든 앱을 종료시킨다.
+</p>
+
+<p>
+이 외에 아래 커맨드를 사용할 수도 있다.
+</p>
+<div class="org-src-container">
+<pre class="src src-bash">launchctl reboot userspace
+</pre>
+</div>
+<p>
+이 명령어는 시스템에서 재시작 할 수 있는 모든 앱을 재시작시킨다.
+</p>
+
+<p>
+물론 완벽한 대처법은 될 수 없으며 macOS를 리붓시키는 것이 가장 좋은 방법임에는 변함이 없다.
 </p>
 </div>
 </div>
