--- a/note/apple.html
+++ b/note/apple.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 <title>애플 - Seorenn</title>
 <meta name="twitter:title" content="애플" />
 <meta name="og:title" content="애플" />
@@ -39,10 +40,10 @@
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
 <nav>
-<a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
-<a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
- <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
- <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
+<a href="/" title="Home"><i class="material-icons md-light">home</i></a>
+<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
+ <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
+ <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
 </nav>
 </div>
 </header>
@@ -155,7 +156,7 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
 <div class="article-link-date">
-2020년 5월 11일 수정</div>
+2020년 5월 15일 수정</div>
 </div>
 </div>
 <div class="article-link">
