--- a/note/css.html
+++ b/note/css.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 <title>CSS - Seorenn</title>
 <meta name="twitter:title" content="CSS" />
 <meta name="og:title" content="CSS" />
@@ -39,10 +40,10 @@
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
 <nav>
-<a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
-<a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
- <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
- <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
+<a href="/" title="Home"><i class="material-icons md-light">home</i></a>
+<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
+ <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
+ <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
 </nav>
 </div>
 </header>
@@ -56,7 +57,7 @@
 <section class="content">
 <header>
 <h1>CSS</h1>
-<div class="title-date">2020년 5월 12일 수정</div>
+<div class="title-date">2020년 5월 15일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -179,7 +180,7 @@ CSS에서 어떤 태그나 클래스 등에 스타일을 입힐 건지 결정하
 태그나 클래스 간의 관계를 명시할 수도 있다.
 </p>
 <div class="org-src-container">
-<pre class="src src-css"><span style="color: #5B6268;">/* </span><span style="color: #5B6268;">content &#46972;&#45716; &#53364;&#47000;&#49828;&#47484; &#49440;&#50616;&#54620; div &#53468;&#44536; &#50504;&#50640; &#51080;&#45716; p &#53468;&#44536;&#50640; &#51077;&#54784;&#51648;&#45716; &#49828;&#53440;&#51068; </span><span style="color: #5B6268;">*/</span>
+<pre class="src src-css"><span style="color: #5B6268;">/* </span><span style="color: #5B6268;">content &#46972;&#45716; &#53364;&#47000;&#49828;&#47484; &#49440;&#50616;&#54620; div &#53468;&#44536; &#50504;&#50640; &#51080;&#45716; &#52395; p &#53468;&#44536;&#50640; &#51077;&#54784;&#51648;&#45716; &#49828;&#53440;&#51068; </span><span style="color: #5B6268;">*/</span>
 <span style="color: #51afef;">div.content &gt; p </span>{ ... }
 </pre>
 </div>
