--- a/note/index.html
+++ b/note/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 <title>NOTE의 최근 업데이트된 글 - Seorenn</title>
 <meta name="twitter:title" content="NOTE의 최근 업데이트된 글" />
 <meta name="og:title" content="NOTE의 최근 업데이트된 글" />
@@ -39,10 +40,10 @@
 <div class="logo-container">
 <a href="/" title="Seorenn"><img class="site-logo" src="/static/seorenn-logo.png" /></a>
 <nav>
-<a href="/" title="Home"><img src="/static/icon-home.svg" alt="home" class="menu-icon" /></a>
-<a href="/post" title="Post"><img src="/static/icon-post.svg" alt="post" class="menu-icon" /></a>
- <a href="/note" title="Note"><img src="/static/icon-note.svg" alt="note" class="menu-icon" /></a>
- <a href="/log" title="Log"><img src="/static/icon-log.svg" alt="log" class="menu-icon" /></a>
+<a href="/" title="Home"><i class="material-icons md-light">home</i></a>
+<a href="/post" title="Post"><i class="material-icons md-light">subject</i></a>
+ <a href="/note" title="Note"><i class="material-icons md-light">list_alt</i></a>
+ <a href="/log" title="Log"><i class="material-icons md-light">portrait</i></a>
 </nav>
 </div>
 </header>
@@ -54,7 +55,14 @@
 <div class="left-empty">
 </div>
 <section class="content">
-<h1>❏ NOTE의 최근 업데이트된 글</h1>
+<h1><i class="material-icons md-light">list_alt</i> NOTE의 최근 업데이트된 글</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
+<div class="article-link-date">
+2020년 5월 15일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/org-mode.html">Org Mode</a></h2>
@@ -81,13 +89,6 @@
 <h2><a class="article-link-title" href="/note/macos.html">macOS</a></h2>
 <div class="article-link-date">
 2020년 5월 15일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
-<div class="article-link-date">
-2020년 5월 12일 수정</div>
 </div>
 </div>
 <div class="article-link">
