--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/twitter.html">Twitter</a></h2>
+<div class="article-link-date">
+2020년 5월 15일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
 <div class="article-link-date">
 2020년 5월 15일 수정</div>
@@ -191,13 +198,6 @@
 <h2><a class="article-link-title" href="/note/emacs-lisp-functions.html">Emacs Lisp Functions</a></h2>
 <div class="article-link-date">
 2020년 5월 11일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/coffee.html">커피</a></h2>
-<div class="article-link-date">
-2020년 5월 9일 수정</div>
 </div>
 </div>
 </div>
