--- a/note/index.html
+++ b/note/index.html
@@ -58,6 +58,13 @@
 <h1><i class="material-icons md-light">list_alt</i> NOTE의 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/twitter.html">Twitter</a></h2>
+<div class="article-link-date">
+2020년 5월 15일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
 <div class="article-link-date">
 2020년 5월 15일 수정</div>
