--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 <h1><i class="material-icons md-light">subject</i> POST의 모든 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/net-neutrality.html">넷플릿스 제한법? 망 중립성 파괴법!</a></h2>
+<div class="article-link-date">
+2020년 5월 16일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/org-customize-id.html">Org 문서를 HTML로 출력할 때마다 바뀌는 Headline ID</a></h2>
 <div class="article-link-date">
 2020년 5월 11일 작성</div>
@@ -118,13 +125,6 @@
 <h2><a class="article-link-title" href="/post/for-good-ad.html">가독성과 광고 배치 사이의 고민</a></h2>
 <div class="article-link-date">
 2020년 4월 22일 작성</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/humanlike-google.html">구글 서비스의 인간스러움(?)</a></h2>
-<div class="article-link-date">
-2020년 4월 17일 작성</div>
 </div>
 </div>
 </div>
