update with 1 changes

--- a/note/javascript.html
+++ b/note/javascript.html
@@ -8,9 +8,9 @@
 <title>Javascript - Seorenn</title>
 <meta name="twitter:title" content="Javascript" />
 <meta name="og:title" content="Javascript" />
-<meta name="description" content="자바스크립트(Javascrit), ECMAScript와 관련된 글들" />
-<meta name="twitter:description" content="자바스크립트(Javascrit), ECMAScript와 관련된 글들" />
-<meta name="og:description" content="자바스크립트(Javascrit), ECMAScript와 관련된 글들" />
+<meta name="description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들" />
+<meta name="twitter:description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들" />
+<meta name="og:description" content="자바스크립트(Javascript), ECMAScript(ES5, ES6)와 관련된 글들" />
 <link rel="canonical" href="https://seorenn.github.io/note/javascript.html" />
 <meta property="og:url" content="https://seorenn.github.io/note/javascript.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
@@ -233,6 +233,7 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 <p>
 무슨 문법인지 아직 이름은 모르겠다.
+하여간 덕분에 중간 매개체 없이 교환(swap) 구현이 가능해졌다.
 </p>
 </div>
 </div>
