--- a/note/swiftui.html
+++ b/note/swiftui.html
@@ -1139,6 +1139,13 @@ with SwiftUI</a></li>
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/swift.html">Swift</a></h2>
+<div class="article-link-date">
+2020년 5월 17일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/ios-macos-dev-links.html">iOS, macOS 개발 관련 링크</a></h2>
 <div class="article-link-date">
 2020년 5월 11일 수정</div>
