update with 6 changes

--- a/note/mongodb.html
+++ b/note/mongodb.html
@@ -57,7 +57,7 @@
 <section class="content">
 <header>
 <h1>MongoDB</h1>
-<div class="title-date">2020년 5월 8일 수정</div>
+<div class="title-date">2020년 5월 18일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
@@ -399,8 +399,9 @@ user라는 컬렉션에서 2000년 이후로 가입한 사람들만 간추려서
 <dt><code>$lookup</code></dt><dd>다른 컬렉션의 필드 가져오기(join과 비슷)</dd>
 <dt><code>$sort</code></dt><dd>정렬</dd>
 <dt><code>$limit</code></dt><dd>갯수 제한</dd>
-<dt><code>$count</code></dt><dd>도큐먼트 갯수</dd>
+<dt><code>$count</code></dt><dd>도큐먼트 개수</dd>
 <dt><code>$unwind</code></dt><dd>array를 풀어헤치기</dd>
+<dt><code>$facet</code></dt><dd>다중 파이프라인 구현</dd>
 </dl>
 
 <p>
